# gyllm

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
notebooks/: 01_gyllm_env_api_manual.ipynb  02_nanorl_agent_manual.ipynb  03_nanorl_data_collection_loop.ipynb  04_nanorl_reinforce_step_by_step.ipynb  05_misalignment_rvl_demo.ipynb  06_misalignment_fs_demo.ipynb  07_misalignment_rrs_demo.ipynb  Untitled.ipynb  env_api_demo.ipynb  env_api_demo.py  gyllm_tutorial.ipynb  gyllm_tutorial.py  nanollm_colab.ipynb  ttt_reinforce_colab.ipynb
scripts/: bench_nanollm.py  dummy_run.py  nanollm_gist.py  train_grpo_agent.py  train_ppo_agent.py  train_reinforce_agent.py
scripts/configs/: grpo_gsm8k.yaml  grpo_math.yaml  ppo_gsm8k.yaml  ppo_math.yaml  ppo_ttt.yaml  reinforce_gsm8k.yaml  reinforce_math.yaml  reinforce_ttt.yaml  reinforce_ttt_reasoning.yaml  reinforce_ttt_reasoning_keep.yaml
tests/: test_agent_api.py  test_batch_env.py  test_core_api.py  test_iterated_games.py  test_misalignment_envs.py  test_openenv_envs.py  test_reasoning_env.py  test_registry.py  test_reverse_echo.py  test_reverse_env.py  test_rollout.py  test_rpc.py  test_tic_tac_toe.py  test_wrappers.py
